infrastructure/base/monitoring/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.org/ssl-redirect: "false"
    nginx.org/redirect-to-https: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts: [grafana.jit.services] # CHANGE ME
      secretName: grafana-tls
  rules:
    - host: grafana.jit.services # CHANGE ME
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vm-k8s-stack-grafana
                port:
                  number: 80
